--- a/styles.css
+++ b/styles.css
@@ -61,4 +61,16 @@ button {
 
 .list-group {
     width: 100%;
+    margin-bottom: 8px;
+}
+
+.list-group > li {
+    width: 740px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.edit-task {
+    cursor: pointer;
 }
